# VocalViz

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  main.rs  multilingual.rs  renderer.rs  transcriber.rs  utils.rs  video.rs
src/whisper/: audio.rs  mod.rs  model.rs  quantized_model.rs  timestamps.rs
