[package]
name = "vocalviz"
description = "Transform any audio into karaoke videos with automatic word-level highlighting."
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.5.40", features = ["derive"] }
ffmpeg-next = "7.1.0"
fontdue = "0.9.3"
hf-hub = "0.4.3"
image = { version = "0.25.6", features = ["png", "jpeg", "gif", "webp"] }
num-traits = "0.2.19"
rand = "0.9.1"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
symphonia = { version = "0.5.4", features = ["all"] }
tokenizers = "0.21.2"
toml = "0.8.23"
tracing = "0.1.41"
